# AlgorithmsForStepikSamaraUniversity

./: .gitignore  CMakeLists.txt  README.md
resources/: brace_seq_2.in  brace_seq_2.out  gas_station_1.in  gas_station_2.in  gas_station_minimal.in  knapsack_problem_2.in  knapsack_problem_minimal.in  room_scheduler_minimal.in  rooms_scheduler_2.in  rooms_scheduler_3.in  schedule_sorted.in  schedule_unsorted.in  scheduler_1.in
src/: CMakeLists.txt  file_reader.cpp  file_reader.h  i_input_stream_device.h  input_stream_device.cpp  input_stream_device.h  utils.h
src/algorithms/: algorithm_concept.h  algorithm_executor.h  brace_sequence_algorithm.cpp  brace_sequence_algorithm.h  gas_station.cpp  gas_station.h  knapsack_problem.cpp  knapsack_problem.h  room_scheduler.cpp  room_scheduler.h  rooms_scheduler.cpp  rooms_scheduler.h  scheduler_algorithm.cpp  scheduler_algorithm.h
tests/: CMakeLists.txt  brace_sequence_algorithm_test.cpp  gas_station_test.cpp  input_stream_device_test.cpp  knapsack_problem_test.cpp  room_scheduler_algorithm_test.cpp  rooms_scheduler_algorithm_test.cpp  scheduler_algorithm_test.cpp  test_config.h  test_config.h.in
